src/objects/Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Question_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created lookup with Question List Object for Japan CM requirement</description>
        <label>Question Ref</label>
        <referenceTo>QuestionList__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Choices__c</fullName>
        <label>Choices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,&apos;NA&apos;))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Free_TextBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Free TextBox?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>Field to specify in which position the question is in the survey.</description>
        <inlineHelpText>Enter the position of the question within the survey here.</inlineHelpText>
        <label>OrderNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Redirect_Question_Number__c</fullName>
        <label>Redirect Question Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the question required?</description>
        <inlineHelpText>Check this box if you want the taker to be required to take the question.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_FreeText_Next_Question_No__c</fullName>
        <label>Single FreeText Next Question No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Answer_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to refer the related Answer</description>
        <label>Survey Answer Id</label>
        <referenceTo>SurveyQuestionResponse__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <label>Total Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Select--Vertical</fullName>
                </value>
                <value>
                    <fullName>Single Select--Horizontal</fullName>
                </value>
                <value>
                    <fullName>Multi-Select--Vertical</fullName>
                </value>
                <value>
                    <fullName>Free Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Question__c</columns>
        <columns>Survey__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Central</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_Survey_Questions</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>Question__c</columns>
        <columns>Survey__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK Survey Questions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Set_Single_Opinion_Text_Next_Question</fullName>
        <active>true</active>
        <description>If show the free text box and set the redirect no for this question, you also need set the next question number when fill in the free text</description>
        <errorConditionFormula>AND(Need_Free_TextBox__c,NOT( ISBLANK( Redirect_Question_Number__c )), ISBLANK( Single_FreeText_Next_Question_No__c ),  $Profile.Name != &apos;IntegrationAPI&apos;,OR(MD__c = &apos;KR&apos;,MD__c = &apos;JP&apos;))</errorConditionFormula>
        <errorDisplayField>Single_FreeText_Next_Question_No__c</errorDisplayField>
        <errorMessage>Please set the single opinion free text next question number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Show_Free_TextBox</fullName>
        <active>true</active>
        <description>To controll which type question can show the free text box</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Type__c , &apos;Multi-Select--Vertical&apos;),ISPICKVAL( Type__c , &apos;Free Text&apos;)), Need_Free_TextBox__c, $Profile.Name != &apos;IntegrationAPI&apos;,OR(MD__c = &apos;JP&apos;,MD__c = &apos;KR&apos;))</errorConditionFormula>
        <errorMessage>Only Single selection can show the free text box</errorMessage>
    </validationRules>
</CustomObject>